kubernetes/main/apps/ai/eek/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: eek
  namespace: ai
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: eek
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: traefik
            app.kubernetes.io/instance: traefik-networking
            io.kubernetes.pod.namespace: networking
      toPorts:
        - ports:
            - port: "8551"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toEntities: ["world"]
      toPorts:
        - ports: [{ port: "443", protocol: TCP }]
